--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "description": "Fake news detection platform",
   "main": "index.js",
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -20,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/L0DESTAR7/FakeNewsDetector/issues"
   },
-  "homepage": "https://github.com/L0DESTAR7/FakeNewsDetector#readme"
+  "homepage": "https://github.com/L0DESTAR7/FakeNewsDetector#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
