--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/L0DESTAR7/FakeNewsDetector#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2"
   }
 }
